--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,6 +2,10 @@
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
+    = f.label :name
+    %br/
+    = f.text_field :name, autofocus: true
+  .field
     = f.label :email
     %br/
     = f.email_field :email, autofocus: true, autocomplete: "email"
@@ -16,6 +20,17 @@
     = f.label :password_confirmation
     %br/
     = f.password_field :password_confirmation, autocomplete: "off"
+  .radio
+    = f.label :gender
+    %br/
+    = f.radio_button :gender, 'Male'
+    Male 
+    = f.radio_button :gender, 'Female', :checked => true
+    Female
+  .field
+    = f.label :date_of_birth
+    %br/
+    = f.date_field :date_of_birth
   .actions
     = f.submit "Sign up"
 = render "devise/shared/links"
