--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,6 +1,6 @@
 %h2
   Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f|
   = devise_error_messages!
   .field
     = f.label :name
@@ -38,6 +38,14 @@
     = f.label :date_of_birth
     %br/
     = f.date_field :date_of_birth
+  
+  - if current_user.avatar.url.present?
+    = image_tag(current_user.avatar.url) 
+    = f.label :remove_avatar do
+      = f.check_box :remove_avatar 
+  = f.file_field :avatar  
+  = f.hidden_field :avatar_cache
+
   .field
     = f.label :current_password
     %i (we need your current password to confirm your changes)
