--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -39,12 +39,15 @@
     %br/
     = f.date_field :date_of_birth
   
-  - if current_user.avatar.url.present?
-    = image_tag(current_user.avatar.url) 
-    = f.label :remove_avatar do
-      = f.check_box :remove_avatar 
-  = f.file_field :avatar  
-  = f.hidden_field :avatar_cache
+  .field
+    = f.label :add_profile_pic
+    %br/
+    - if current_user.avatar.url.present?
+      = image_tag(current_user.avatar.url) 
+      = f.label :remove_avatar do
+        = f.check_box :remove_avatar 
+    = f.file_field :avatar  
+    = f.hidden_field :avatar_cache
 
   .field
     = f.label :current_password
