--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -43,9 +43,12 @@
     = f.label :add_profile_pic
     %br/
     - if current_user.avatar.url.present?
-      = image_tag(current_user.avatar.url) 
+      = image_tag(current_user.avatar.thumb.url)
+      = f.label :remove_profile_pic 
       = f.label :remove_avatar do
         = f.check_box :remove_avatar 
+        %br/
+    = f.label :select_profile_pic
     = f.file_field :avatar  
     = f.hidden_field :avatar_cache
 
