[akshay]Added favicon and logo

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,18 +9,22 @@
     %section
       %article
         %header
-          %h2= "Express Anonymous"
-          %p
-            Posted on
-            %time{ :datetime => "2009-09-04T16:31:24+02:00" }= "September 4th 2009"
-            by
-            %a{ :href => "#" }= "A2B1P3R1T1"
-            %article
-              %p
-                Anonymous message service with little twist.
-              %p
-                Come JOIN US!
-      
+          %center
+            %h2
+              = "Express Anonymous"
+              %br
+              = image_tag "logo.png"
+            %p
+              Posted on
+              %time{ :datetime => "2009-09-04T16:31:24+02:00" }= "September 4th 2009"
+              by
+              %a{ :href => "#" }= "A2B1P3R1T1"
+              %article
+                %p
+                  Anonymous message service with little twist.
+                %p
+                  Come JOIN US!
+        
       %footer
         %p
-          Copyright 2011 A2B1P3R1T1
+          Copyright 2018 A2B1P3R1T1
