[akshay]display profile pic and alert messages

--- a/app/views/shared/_links.html.haml
+++ b/app/views/shared/_links.html.haml
@@ -1,5 +1,13 @@
 - if user_signed_in?
   %li
+    = "Hi, #{current_user.name}!!!"
+    - if current_user.avatar.present?
+      = image_tag(current_user.avatar.thumb.url)
+- if user_signed_in?
+  %li
+    = link_to('DashBoard', dashboard_index_path)
+- if user_signed_in?
+  %li
     = link_to('Logout', destroy_user_session_path, method: :delete)
 - else
   %li
