--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,8 +1,10 @@
-%h1 Dashboard#index
-%p Find me in app/views/dashboard/index.html.haml
 %body
   %footer
   %h3.extra-margin-top Invite Users
   = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
     = f.text_field :email, placeholder: 'Email',label:false
     = f.submit 'Invite User'
+  %h4.extra-margin-top Received Messages
+  - @messages.each do |message| 
+    =message.content
+    %br
