--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -3,9 +3,20 @@
 %body
   %footer
   %h3.extra-margin-top Invite Users
+
   = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
     = f.text_field :email, placeholder: 'Email',label:false
     = f.submit 'Invite User'
+  =link_to "Create Message", new_message_path(current_user)
+
+  %table
+    %tr
+      %th content
+    - @messages.each do |message|
+      %tr
+        %td=message.content
+        %td=link_to "Edit"
+        %td=link_to "Delete"
+
   
-  =link_to "Create Message", new_user_message_path(current_user)
 
