[Tanya] link for like,unlock added

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -15,8 +15,8 @@
     - @messages.each do |message|
       %tr
         %td=message.content
-        %td=link_to "Edit"
-        %td=link_to "Delete"
+        %td=link_to "like"
+        %td=link_to "unlock"
 
   
 
