--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,10 +1,17 @@
 %body
   %footer
   %h3.extra-margin-top Invite Users
+
   = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
     = f.text_field :email, placeholder: 'Email',label:false
     = f.submit 'Invite User'
-  %h4.extra-margin-top Received Messages
-  - @messages.each do |message| 
-    =message.content
-    %br
+  =link_to "Create Message", new_message_path(current_user)
+
+  %table
+    %tr
+      %th content
+    - @messages.each do |message|
+      %tr
+        %td=message.content
+        %td=link_to "like"
+        %td=link_to "unlock"
