--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,3 +1,9 @@
+- if @message.errors.any?
+  %h2
+  Errors:
+  %ul
+  - @message.errors.full_messages.each do |msg|
+    %li= msg
 =form_with(model: @message, local: true) do |form|
   %table{ :border => 0, :width => "100%", :height => "100%" }
     %tr
