--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -13,5 +13,7 @@
     - @messages.each do |message|
       %tr
         %td=message.content
-        %td=link_to "like"
-        %td=link_to "unlock"
+        %td=link_to "like"  if message.is_liked == 0
+        %td=link_to "unlock", unlock_message_path(message) if message.is_unlocked == 0
+        %td=User.find(message.sender_id).email if message.is_unlocked == 1
+
