[Tanya] Message unlock feature complete

--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -9,7 +9,7 @@
 
   %table
     %tr
-      %th content
+      %th Received Messages
     - @messages.each do |message|
       %tr
         %td=message.content
