[akshay]inital bootstrap and navbar is added

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -16,7 +16,7 @@
               = image_tag "logo.png"
             %p
               Posted on
-              %time{ :datetime => "2009-09-04T16:31:24+02:00" }= "September 4th 2009"
+              %time{ :datetime => "2018-03-04T16:31:24+02:00" }= "March 2018"
               by
               %a{ :href => "#" }= "A2B1P3R1T1"
               %article
