--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,36 +1,44 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .radio
-    = f.label :gender
-    %br/
-    = f.radio_button :gender, 'Male'
-    Male 
-    = f.radio_button :gender, 'Female', :checked => true
-    Female
-  .field
-    = f.label :date_of_birth
-    %br/
-    = f.date_field :date_of_birth
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.container.Absolute-Center.is-Responsive
+  .row
+    .col-md-4
+    .col-md-4
+      .panel.panel-success
+        .panel-heading
+          .panel-title
+            %h4 SignUP
+        .panel-body
+          = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+            = devise_error_messages!
+            .field
+              = f.label :name
+              %br/
+              = f.text_field :name, autofocus: true
+            .field
+              = f.label :email
+              %br/
+              = f.email_field :email, autofocus: true, autocomplete: "email"
+            .field
+              = f.label :password
+              - if @minimum_password_length
+                %em
+                  (#{@minimum_password_length} characters minimum)
+              %br/
+              = f.password_field :password, autocomplete: "off"
+            .field
+              = f.label :password_confirmation
+              %br/
+              = f.password_field :password_confirmation, autocomplete: "off"
+            .radio
+              = f.label :gender
+              %br/
+              = f.radio_button :gender, 'Male'
+              Male 
+              = f.radio_button :gender, 'Female', :checked => true
+              Female
+            .field
+              = f.label :date_of_birth
+              %br/
+              = f.date_field :date_of_birth
+            .actions
+              = f.submit "Sign up"
+          = render "devise/shared/links"
