--- a/app/views/shared/_links.html.haml
+++ b/app/views/shared/_links.html.haml
@@ -18,3 +18,6 @@
 - else
   %li
     = link_to('Register', new_user_registration_path)
+- if user_signed_in?
+  %li
+    = link_to('Wallet', current_user.wallet)
