--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,19 +1,24 @@
 %body
   %footer
   %h3.extra-margin-top Invite Users
-
-  = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
-    = f.text_field :email, placeholder: 'Email',label:false
-    = f.submit 'Invite User'
-  =link_to "Create Message", new_message_path(current_user)
-
-  %table
-    %tr
-      %th Received Messages
-    - @messages.each do |message|
-      %tr
-        %td=message.content
-        %td=link_to "like", like_message_path(message) if message.is_liked == 0
-        %td=" liked " if message.is_liked == 1
-        %td=link_to "unlock", unlock_message_path(message) if message.is_unlocked == 0
-        %td=User.find(message.sender_id).email if message.is_unlocked == 1
+  .container
+    %div.row
+      %div.col-md-3
+        = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
+          = f.text_field :email, placeholder: 'Email',label:false
+          = f.submit 'Invite User'
+        =link_to "Create Message", new_message_path(current_user), class: "btn btn-secondary"
+      %div.col-md-9
+        %div.row
+          %h2 Received Messages
+        - @messages.each do |message|
+          %div.row.border.border-rounded.border-secondary.mt-2.bg.bg-light
+            %div.col-md-8
+              =message.content
+            %div.col-md-2
+              =link_to "like", like_message_path(message), class: "btn btn-primary" if message.is_liked == 0
+              =" liked " if message.is_liked == 1
+            %div.col-md-2
+              =link_to "unlock", unlock_message_path(message), class: "btn btn-sm btn-primary" if message.is_unlocked == 0
+              =User.find(message.sender_id).email if message.is_unlocked == 1
+            
