--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -4,15 +4,19 @@
   .container
     %div.row
       %div.col-md-3
+        %button.btn.btn-primary{ "data-toggle" => "modal", "data-target" => "#exampleModal1" }
+          invite friends
         = form_for(User.new, url: user_invitation_path, html: {class: 'form-inline'}) do |f|
           = f.text_field :email, placeholder: 'Email',label:false
           = f.submit 'Invite User'
-        =link_to "Create Message", new_message_path(current_user), class: "btn btn-secondary" 
+        %button.btn.btn-primary{ "data-toggle" => "modal", "data-target" => "#exampleModal" }
+          Create Message
+        /=link_to "Create Message", new_message_path(current_user), class: "btn btn-secondary" 
       %div.col-md-9
         %div.row
           %h2 Received Messages
         - @messages.each do |message|
-          %div.row.border.border-rounded.border-secondary.mt-2.bg.bg-light
+          %div.row.border.border-rounded.border-secondary.mt-3.bg.bg-light
             %div.col-md-8
               =message.content
             %div.col-md-2
@@ -22,3 +26,26 @@
               =link_to "unlock", unlock_message_path(message), class: "btn btn-sm btn-primary" if message.is_unlocked == 0
               =User.find(message.sender_id).email if message.is_unlocked == 1
             
+#exampleModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", :role => "dialog", :tabindex => "-1"}
+  .modal-dialog{:role => "document"}
+    .modal-content
+      .modal-header
+        %h5#exampleModalLabel.modal-title New message
+        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
+          %span{"aria-hidden" => "true"} ×
+      =form_for(Message.new, url: messages_path(current_user), method: :post, html: {class: 'form-inline'}) do |form|
+        .modal-body
+          %div.row.mt-2.bg.bg-light
+            %div.col-md-4         
+              =form.label 'receiver_email'
+            %div.col-md-8
+              =form.text_field 'receiver_id'
+              /=@message.errors.full_messages_for(:receiver_id) if @message.errors.messages[:receiver_id]
+          %div.row.mt-2.bg.bg-light
+            %div.col-md-4
+              =form.label'content'
+            %div.col-md-8
+              =form.text_field 'content'
+              /=@message.errors.full_messages_for(:content) if @message.errors.messages[:content]
+        .modal-footer
+          =form.submit 'SUBMIT'
