[akshay]devise error messages as bootstrap errors

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,5 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = render 'shared/links'
-    %p.notice= notice
-    %p.alert= alert
+    = render 'layouts/custom_error'
     = yield
