--- a/app/views/messages/create.html.haml
+++ b/app/views/messages/create.html.haml
@@ -1,10 +1,12 @@
-- if @message.errors.any?
-  %h2
-  Errors:
-  %ul
-  - @message.errors.full_messages.each do |msg|
-    %li= msg
-  %br
-  =link_to "Create Message", new_message_path(current_user)
-- else
-  %p message has been created
+/- if @message.errors.any?
+/  %h2
+/  Errors:
+/  %ul
+/  - @message.errors.full_messages.each do |msg|
+/    %li= msg
+/  %br
+/  =link_to "Create Message", new_message_path(current_user)
+/- else
+/  %p message has been created
+
+%p message has been created
