--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,18 +1,32 @@
-- if @message.errors.any?
-  %h2
-  Errors:
-  %ul
-  - @message.errors.full_messages.each do |msg|
-    %li= msg
+/- if @message.errors.any?
+/  %h2
+/  Errors:
+/  %ul
+/  - @message.errors.full_messages.each do |msg|
+/    %li= msg
+/=form_with(model: @message, local: true) do |form|
+/  %table{ :border => 0, :width => "100%", :height => "100%" }
+/    %tr
+/      %td=form.label 'receiver_email'
+/      %td=form.text_field 'receiver_id'
+/    %tr
+/      %td=form.label'content'
+/      %td=form.text_field 'content'
+/    %tr
+/      %td=form.submit	'SUBMIT'
+
 =form_with(model: @message, local: true) do |form|
   %table{ :border => 0, :width => "100%", :height => "100%" }
     %tr
       %td=form.label 'receiver_email'
       %td=form.text_field 'receiver_id'
+      %td=@message.errors.full_messages_for(:receiver_id) if @message.errors.messages[:receiver_id]
     %tr
       %td=form.label'content'
       %td=form.text_field 'content'
+      %td=@message.errors.full_messages_for(:content) if @message.errors.messages[:content]
     %tr
-      %td=form.submit	'SUBMIT'
+      %td=form.submit 'SUBMIT'
+
 
 
