[bhuvna] testcases done

--- a/app/views/wallet/show.html.haml
+++ b/app/views/wallet/show.html.haml
@@ -1,24 +1,29 @@
-%h1 Wallet
-Wallet points =
-= @wallet.id
-%h1 Wallet Histories
-%table{:align => "center", :border => "10"}
-  %th Points
-  %th Type
-  %th User's Name
-  %th Time
-  %th Date
-  - @wallet.wallet_histories.each do |history|
-    %tr
-      %td
-        = '+' if history.points > 0
-        = history.points
-      %td
-        = history.transaction_type
-      %td
-        = history.recepient_name
-      %td
-        = history.created_at.strftime("%I : %M %p")
-      %td
-        = history.created_at.strftime("%a , %d %b %y")
-    %tr
+%html{:lang => "en"}
+  %body
+    %h1 Wallet points = #{@wallet.points}
+    .container
+    .text-center
+      %h2 Wallet histories
+      %table.table.table-striped
+        %thead
+          %tr
+            %th Points
+            %th Transaction Type
+            %th User's Name
+            %th Time
+            %th Date
+        %tbody
+        - @wallet.wallet_histories.each do |history|        
+          %tr
+            %td
+              = '+' if history.points > 0
+              = history.points
+            %td
+              = history.transaction_type
+            %td
+              = history.recepient_name
+            %td
+              = history.created_at.strftime("%I : %M %p")
+            %td
+              = history.created_at.strftime("%a , %d %b %y")
+          %tr
